--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "typeface-lexend-deca": "^1.1.13"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
