--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "type": "module",
   "dependencies": {
     "@supabase/supabase-js": "^2.38.4",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "morgan": "^1.10.0"
