--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-router-dom": "^6.21.1",
     "typeface-lexend-deca": "^1.1.13"
   },
   "devDependencies": {
